<resources>
    <!-- Commons -->
    <string name="app_name">Curso Android</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="back">Atrás</string>
    <string name="confirm">Confirmar</string>
    <string name="guess">Invitado</string>
    <string name="welcome">Hola, %1$s</string>

    <!-- Drawer menu -->
    <string name="dialog_toggle_open">Abrir drawer</string>
    <string name="dialog_toggle_close">Cerrar drawer</string>
    <string name="android_basic_drawer_item">Android básico</string>
    <string name="home_drawer_item">Home</string>
    <string name="dialog_drawer_item">Diálogos</string>
    <string name="recycler_drawer_item">Recycler</string>

    <string name="android_advanced_drawer_item">Android avanzado</string>
    <string name="coroutines_drawer_item">Corrutinas</string>

    <!-- Login fragment -->
    <string name="hint_email">Email</string>
    <string name="email_helper">devepoler@gmail.com</string>
    <string name="hint_password">Contraseña</string>
    <string name="password_helper">111</string>
    <string name="text_bt_login">Login</string>
    <string name="text_bt_guess">Acceder como invitado</string>

    <!-- Home fragment -->
    <string name="home_fragment_title">Home</string>
    <string name="home_fragment_tv">Hogar, dulce hogar</string>

    <!-- Dialog fragment -->
    <string name="dialog_fragment_title">Diálogos</string>
    <string name="bt_simple_dialog">Simple Dialog</string>
    <string name="bt_single_choice_dialog">Single Choice Dialog</string>
    <string name="bt_multiple_choice_dialog">Multiple Choice Dialog</string>
    <string name="bt_time_picker_dialog">Time Picker</string>
    <string name="bt_date_picker_dialog">Date Picker</string>
    <string name="dialog_title">Título</string>
    <string name="dialog_message">Mensaje</string>

    <string name="fruit_title">Fruta favorita</string>
    <string name="fruits_title">Frutas favoritas</string>
    <string-array name="fruits">
        <item>Plátano</item>
        <item>Melón</item>
        <item>Sandía</item>
        <item>Manzana</item>
        <item>Pera</item>
    </string-array>

    <string name="time_picker_title">Selecciona hora</string>
    <string name="date_picker_title">Selecciona fecha</string>
    <string name="selected_time">Hora seleccionada -> %1$s</string>
    <string name="selected_date">Fecha seleccionada -> %1$s</string>

    <!-- Recycler fragment -->
    <string name="recycler_fragment_title">Jueguitos</string>
    <string name="recycler_fragment_tv">Jueguitos por doquier</string>

    <string name="item_game_platforms">Plataforma(s): %1$s</string>

    <!-- Coroutines fragment -->
    <string name="coroutines_fragment_title">Corrutinas</string>
    <string name="coroutines_fragment_tv">Corrutinas, corrutinas everywhere</string>
</resources>
